# hyprprompt

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  QT_BUILD.md  README.md  ROADMAP.md
ipc/: socket.cpp  socket.h
lua/: init.lua
tests/: test_integration.lua  test_lua_api.lua
ui/: Main.qml  main.cpp  main.h
